--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
-    color: #f03c02;
+    color: #dc3545;
 }
 
 .nav-menu .drop-down > a:after {
@@ -235,7 +235,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-    color: #f03c02;
+    color: #dc3545;
     text-decoration: none;
 }
 
@@ -1669,6 +1669,102 @@ h1, h2, h3, h4, h5, h6 {
     background: #dc3545;
     color: white;
 }
+/*--------------------------------------------------------------
+# Dashboard
+--------------------------------------------------------------*/
+.customer-dashboard{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.customer-dashboard .customer-box{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    /*border: 1px solid #ebe6e4;*/
+    /*padding: 50px 20px;*/
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+}
+
+.customer-dashboard .customer-box .customer-heading{
+    margin-top: 30px;
+    margin-bottom: 40px;
+    width: 100%;
+    height: 100px;
+    /*background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;*/
+    /*padding: 25px 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;*/
+    /*background-image:  url({{asset ('assets/images/home-820389_1920.jpg')}});*/
+    background-color: #faf9f8;
+}
+
+.customer-dashboard .customer-box .customer-heading img{
+    height: 80px;
+    float: left;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 40px;
+    overflow: hidden;
+}
+.customer-dashboard .customer-box .customer-heading h4{
+    color: #0c0e10;
+    font-size: 20px;
+    margin-left: 150px;
+    padding-top: 25px;
+}
+br{
+    color: #dc3545;
+}
+
+.customer-dashboard .customer-box .customer-body{
+    margin-top: 20px;
+    position: relative;
+    -ms-flex: 1;
+    flex: 1;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 200px;
+}
+
+.customer-dashboard .customer-box .customer-body .customer-menu{
+    width: 200px;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-height: 100%;
+    padding: 0;
+}
+
+.customer-dashboard .customer-box .customer-body .customer-menu .customer_menu-list{
+    position: relative;
+    margin: 0;
+    transition: background .3s ease-in-out;
+}
+
+.customer-dashboard .customer-box .customer-body .customer-menu .customer_menu-list .customer__menu-list{
+    display: block;
+    padding: 0.75rem 1rem;
+    color: #dc3545;
+    text-decoration: none;
+    background: transparent;
+}
+
+.customer-dashboard .customer-box .customer-body .customer-menu .customer_menu-list .customer__menu-list .active{
+    color: #fff;
+    background: #3a4248;
+}
+
+.customer-dashboard .customer-box{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    /*border: 1px solid #ebe6e4;*/
+    /*padding: 50px 20px;*/
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+}
 
 /*--------------------------------------------------------------
 # Profile
@@ -1685,6 +1781,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 50px 20px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
+
 
 .profile .profile-box .profile-heading{
     margin-top: -30px;
